Готовы сбор и обработка. В интерфейс функционал не добавлен. Удалены методы ручного запуска (main)